gcc/testsuite/g++.dg/parse/operator4.C
int operator *(int, ...); // { dg-error "class|variable number of arguments" }
